--- a/Ars Futura/project/index.html
+++ b/Ars Futura/project/index.html
@@ -19,7 +19,7 @@
     <script src="js/bootstrap.min.js"></script>
 </head>
 
-<body>
+<body class="landing-page">
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -45,21 +45,64 @@
         </div>
     </nav>
     <header class="col-xs-12">
-        <div class="header-container col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+        <div class="header-container">
             <div class="header-cta col-xs-12">
                 <div class="header-cta-image hidden-xs">
                 </div>
                 <div class="header-cta-text">
-                    <h1>Lorem ipsum.</h1>
-                    <p>Lorem ipsum dolor sit amet, <span>consectetur adipiscing elit</span>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad <span>minim veniam</span>, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <span>Excepteur sint</span> occaecat cupidatat nonproident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                    <a href="">Read More</a>
+                    <h1 class="col-xs-12">Lorem ipsum.</h1>
+                    <p class="col-xs-12">Lorem ipsum dolor sit amet, <span>consectetur adipiscing elit</span>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad <span>minim veniam</span>, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <span>Excepteur sint</span> occaecat cupidatat nonproident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <a class="col-xs-12" href="">READ MORE</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div class="main-container col-xs-12">
+        <div class="container">
+            <div class="row features">
+                <h2  id="features" class=""><span>Features</span></h2>
+                <div class="col-xs-4 feature-container">
+                    <div class="col-xs-12">
+                        <div class="feature-inside col-xs-12 col-sm-12">
+                            <div class="feature-image feature-image-one"></div>
+                            <h3>Ut enim ad minim</h3>
+                            <q>Quis nostrud exercitation</q>
+                            <div class="feature-divider"></div>
+                            <p>Cumque reiciendis, asperiores iste fuga nihil velit deleniti perspiciatis corporis et aspernatur repudiandae at sequi doloribus rem consectetur, expedita quae quos dolor dicta qui molestiae est saepe pariatur, tenetur unde!</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-4 feature-container">
+                    <div class="col-xs-12">
+                        <div class="feature-inside col-xs-12 col-sm-12">
+                            <div class="feature-image feature-image-two"></div>
+                            <h3>Molit anim id est</h3>
+                            <q>Exceptur sint occaecat</q>
+                            <div class="feature-divider"></div>
+                            <p>Eius repudiandae qui recusandae officiis sit totam voluptatibus eligendi fugiat nostrum cupiditate. In nulla nihil dolore aut fuga sint expedita ducimus quibusdam ipsam iure dolor repellendus eius, totam! A, illo. Nihil cupitate nobis aut!</p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-4 feature-container">
+                    <div class="col-xs-12">
+                        <div class="feature-inside col-xs-12 col-sm-12">
+                            <div class="feature-image feature-image-three"></div>
+                            <h3>Sunt in culpa qui</h3>
+                            <q>Deserunt molit anim id</q>
+                            <div class="feature-divider"></div>
+                            <p>Debitis alias beatae, optio soluta suscipit unde vel, id, fugiat modi quibusdam explicabo possimus et sapiente vitae perspiciatis dicta, nihil libero. Eveniet quisquam numquam incidunt, inventore, aperiam provident ratione est.</p>
+
+                        </div>
                     </div>
                 </div>
             </div>
-        </header>
-        <footer id="footer" class="col-xs-12">
+        </div>
+    </div>
+    <footer id="footer" class="col-xs-12">
 
-        </footer>
-    </body>
-    <script src="js/myjs.js"></script>
-    </html>
+    </footer>
+</body>
+<script src="js/myjs.js"></script>
+</html>
