All done, some optimization on the way

--- a/Ars Futura/project/index.html
+++ b/Ars Futura/project/index.html
@@ -33,21 +33,21 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href='#'>Features</a>
+                    <a href='#features'>Features</a>
                 </li>
                 <li>
                     <a href='#footer'>Footer</a>
                 </li>
                 <li>
-                    <a href='#cc'><span>ars</span> futura</a>
+                    <a href='http://arsfutura.co/'><span>ars</span> futura</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <header class="col-xs-12">
+    <header class="col-xs-12 background-center">
         <div class="header-container">
-            <div class="header-cta col-xs-12">
-                <div class="header-cta-image hidden-xs">
+            <div class="header-cta col-xs-12 vertical-align">
+                <div class="header-cta-image background-center hidden-xs">
                 </div>
                 <div class="header-cta-text">
                     <h1 class="col-xs-12">Lorem ipsum.</h1>
@@ -101,7 +101,27 @@
         </div>
     </div>
     <footer id="footer" class="col-xs-12">
-
+        <div class="col-xs-12 col-sm-11 footer-upper">
+            <a class="secondary-toplink col-xs-3 col-sm-3" href="">back to top &#8593;</a>
+            <div class="footer-social col-xs-9 col-sm-9">
+                <div class="facebook"></div>
+                <div class="twitter"></div>
+                <div class="instagram"></div>
+                <div class="google-plus"></div>
+                <div class="youtube"></div>
+            </div>
+             <a class="toplink col-xs-3 col-sm-3" href="">back to top &#8593;</a>
+        </div>
+        <div class="col-xs-12 footer-about">
+            <p><span>Developed 
+            </span>with  <img class="love-icon" src="images/footer/love-icon.png">
+            <img class="love-icon-2x" src="images/footer/love-icon@2x.png">
+             by
+            <span> Marko Ivanetić</span></p>
+        </div>
+        <div class="col-xs-12 footer-lower">
+            <div class="footer-logo background-center"></div>
+        </div>
     </footer>
 </body>
 <script src="js/myjs.js"></script>
