--- a/Ars Futura/project/index.html
+++ b/Ars Futura/project/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body class="landing-page">
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
