--- a/Ars Futura/project/index.html
+++ b/Ars Futura/project/index.html
@@ -1,149 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="">
-      <meta name="author" content="Marko Ivanetić">
-      <title>Ars Futura</title>
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-      <link href="css/bootstrap.css" rel="stylesheet">
-      <link href="css/reset.css" rel="stylesheet">
-      <link href="css/navigation.css" rel="stylesheet">
-      <link href="css/footer.css" rel="stylesheet">
-      <link href="css/main.css" rel="stylesheet">
-      <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600'
-         rel='stylesheet' type='text/css'>
-      <script src="js/bootstrap.min.js"></script>
-   </head>
-   <body id="body" class="landing-page">
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> 
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span
-               class="icon-bar"></span> <span class="icon-bar"></span>
-            </button> 
-            <a class="navbar-brand" href="index.html">
-               <img alt="Ars futura logo" class="retina-friendly" src="images/header/lorem-logo.png">
-            </a>
-         </div>
-         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-               <li> <a href='#features'>Features</a>
-               </li>
-               <li> <a href='#footer'>Footer</a>
-               </li>
-               <li> <a href='http://arsfutura.co/'><span>ars</span> futura</a>
-               </li>
-            </ul>
-         </div>
-      </nav>
-    <div id="loading">
-            <img id="loading-image" src="images/ajax-loader.gif" alt="Loading..."/>
-         </div>
 
-      <header class="col-xs-12 background-center">
-         <div class="header-container">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="Marko Ivanetić">
+    <title>Ars Futura</title>
+
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/reset.css" rel="stylesheet">
+    <link href="css/navigation.css" rel="stylesheet">
+    <link href="css/footer.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,600' rel='stylesheet' type='text/css'>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/myjs.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+</head>
+
+<body id="body" class="landing-page">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span> <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html">
+                <img alt="Ars futura logo" class="retina-friendly" src="images/header/lorem-logo.png">
+            </a>
+        </div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li> <a href='#features'>Features</a>
+                </li>
+                <li> <a href='#footer'>Footer</a>
+                </li>
+                <li> <a href='http://arsfutura.co/'><span>ars</span> futura</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div id="loading">
+        <img id="loading-image" src="images/ajax-loader.gif" alt="Loading..." />
+    </div>
+
+    <header class="col-xs-12 background-center">
+        <div class="header-container">
             <div class="header-cta col-xs-12 vertical-align">
-               <div class="header-cta-image background-center hidden-xs"></div>
-               <div class="header-cta-text">
-                  <h1 class="col-xs-12">Lorem ipsum.</h1>
-                  <p class="col-xs-12">Lorem ipsum dolor sit amet, <span>consectetur adipiscing elit</span>, sed
-                     do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                     ad <span>minim veniam</span>, quis nostrud exercitation ullamco laboris
-                     nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
-                     in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <span>Excepteur sint</span> occaecat
-                     cupidatat nonproident, sunt in culpa qui officia deserunt mollit anim id
-                     est laborum.
-                  </p>
-                  <a class="col-xs-12" href="#features">READ MORE</a>
-               </div>
+                <div class="header-cta-image background-center hidden-xs"></div>
+                <div class="header-cta-text">
+                    <h1 class="col-xs-12">Lorem ipsum.</h1>
+                    <p class="col-xs-12">Lorem ipsum dolor sit amet, <span>consectetur adipiscing elit</span>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad <span>minim veniam</span>, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <span>Excepteur sint</span> occaecat cupidatat nonproident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                    <a class="col-xs-12" href="#features">READ MORE</a>
+                </div>
             </div>
-         </div>
-      </header>
-      <div class="main-container col-xs-12">
-         <div class="container">
+        </div>
+    </header>
+    <div class="main-container col-xs-12">
+        <div class="container">
             <div id="features" class="row features">
-               <h2 class=""><span>Features</span></h2>
-               <div class="col-xs-4 feature-container">
-                  <div class="col-xs-12">
-                     <div class="feature-inside col-xs-12 col-sm-12">
-                        <img class="feature-image feature-image-one retina-friendly" src="images/features/feature-one-icon.png" alt="Feature image">
-                        <h3>Ut enim ad minim</h3>
-                        <q>Quis nostrud exercitation</q>
-                        <div class="feature-divider"></div>
-                        <p>Cumque reiciendis, asperiores iste fuga nihil velit deleniti perspiciatis
-                           corporis et aspernatur repudiandae at sequi doloribus rem consectetur,
-                           expedita quae quos dolor dicta qui molestiae est saepe pariatur, tenetur
-                           unde!
-                        </p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-xs-4 feature-container">
-                  <div class="col-xs-12">
-                     <div class="feature-inside col-xs-12 col-sm-12">
-                        <img class="feature-image feature-image-two retina-friendly" src="images/features/feature-two-icon.png"
-                           alt="Feature image">
-                        <h3>Molit anim id est</h3>
-                        <q>Exceptur sint occaecat</q>
-                        <div class="feature-divider"></div>
-                        <p>Eius repudiandae qui recusandae officiis sit totam voluptatibus eligendi
-                           fugiat nostrum cupiditate. In nulla nihil dolore aut fuga sint expedita
-                           ducimus quibusdam ipsam iure dolor repellendus eius, totam! A, illo. Nihil
-                           cupitate nobis aut!
-                        </p>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-xs-4 feature-container">
-                  <div class="col-xs-12">
-                     <div class="feature-inside col-xs-12 col-sm-12">
-                        <img class="feature-image feature-image-three retina-friendly" src="images/features/feature-three-icon.png"
-                           alt="Feature image">
-                        <h3>Sunt in culpa qui</h3>
-                        <q>Deserunt molit anim id</q>
-                        <div class="feature-divider"></div>
-                        <p>Debitis alias beatae, optio soluta suscipit unde vel, id, fugiat modi
-                           quibusdam explicabo possimus et sapiente vitae perspiciatis dicta, nihil
-                           libero. Eveniet quisquam numquam incidunt, inventore, aperiam provident
-                           ratione est.
-                        </p>
-                     </div>
-                  </div>
-               </div>
+                <h2 class=""><span>Features</span></h2>
+                <div class="col-xs-4 feature-container">
+                    <div class="col-xs-12">
+                        <div class="feature-inside col-xs-12 col-sm-12">
+                            <img class="feature-image feature-image-one retina-friendly" src="images/features/feature-one-icon.png" alt="Feature image">
+                            <h3>Ut enim ad minim</h3>
+                            <q>Quis nostrud exercitation</q>
+                            <div class="feature-divider"></div>
+                            <p>Cumque reiciendis, asperiores iste fuga nihil velit deleniti perspiciatis corporis et aspernatur repudiandae at sequi doloribus rem consectetur, expedita quae quos dolor dicta qui molestiae est saepe pariatur, tenetur unde!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-4 feature-container">
+                    <div class="col-xs-12">
+                        <div class="feature-inside col-xs-12 col-sm-12">
+                            <img class="feature-image feature-image-two retina-friendly" src="images/features/feature-two-icon.png" alt="Feature image">
+                            <h3>Molit anim id est</h3>
+                            <q>Exceptur sint occaecat</q>
+                            <div class="feature-divider"></div>
+                            <p>Eius repudiandae qui recusandae officiis sit totam voluptatibus eligendi fugiat nostrum cupiditate. In nulla nihil dolore aut fuga sint expedita ducimus quibusdam ipsam iure dolor repellendus eius, totam! A, illo. Nihil cupitate nobis aut!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-4 feature-container">
+                    <div class="col-xs-12">
+                        <div class="feature-inside col-xs-12 col-sm-12">
+                            <img class="feature-image feature-image-three retina-friendly" src="images/features/feature-three-icon.png" alt="Feature image">
+                            <h3>Sunt in culpa qui</h3>
+                            <q>Deserunt molit anim id</q>
+                            <div class="feature-divider"></div>
+                            <p>Debitis alias beatae, optio soluta suscipit unde vel, id, fugiat modi quibusdam explicabo possimus et sapiente vitae perspiciatis dicta, nihil libero. Eveniet quisquam numquam incidunt, inventore, aperiam provident ratione est.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
-         </div>
-      </div>
-      <footer id="footer" class="col-xs-12">
-         <div class="col-xs-12 col-sm-11 footer-upper">
-            <div
-               class="footer-social col-xs-9 col-sm-9">
-               <a href=""><img alt="Facebook page" src="images/footer/social-facebook.png" class="social-icon retina-friendly"></a>
-               <a href=""><img alt="Twitter page" src="images/footer/social-twitter.png" class="social-icon retina-friendly"></a>
-               <a href=""><img alt="Instagram page" src="images/footer/social-instagram.png" class="social-icon retina-friendly"></a>
-               <a href=""><img alt="Google-plus account" src="images/footer/social-google-plus.png" class="social-icon retina-friendly"></a>
-               <a href=""><img alt="Youtube channel" src="images/footer/social-youtube.png" class="social-icon retina-friendly youtube"></a>
+        </div>
+    </div>
+    <footer id="footer" class="col-xs-12">
+        <div class="col-xs-12 col-sm-11 footer-upper">
+            <div class="footer-social col-xs-9 col-sm-9">
+                <a href=""><img alt="Facebook page" src="images/footer/social-facebook.png" class="social-icon retina-friendly">
+                </a>
+                <a href=""><img alt="Twitter page" src="images/footer/social-twitter.png" class="social-icon retina-friendly">
+                </a>
+                <a href=""><img alt="Instagram page" src="images/footer/social-instagram.png" class="social-icon retina-friendly">
+                </a>
+                <a href=""><img alt="Google-plus account" src="images/footer/social-google-plus.png" class="social-icon retina-friendly">
+                </a>
+                <a href=""><img alt="Youtube channel" src="images/footer/social-youtube.png" class="social-icon retina-friendly youtube">
+                </a>
             </div>
             <a class="toplink col-xs-3 col-sm-3" href="#body">back to top &#8593;</a>
-         </div>
-         <div class="col-xs-12 footer-about">
+        </div>
+        <div class="col-xs-12 footer-about">
             <p><span>Developed 
                </span>with
-               <img alt ="Love icon" class="love-icon retina-friendly" src="images/footer/love-icon.png">
-               by <span> Marko Ivanetić</span>
+                <img alt="Love icon" class="love-icon retina-friendly" src="images/footer/love-icon.png"> by <span> Marko Ivanetić</span>
             </p>
-         </div>
-         <div class="col-xs-12 footer-lower">
+        </div>
+        <div class="col-xs-12 footer-lower">
             <img src="images/footer/ars-logo.png" alt="Ars futura" class="footer-logo retina-friendly">
-         </div>
-      </footer>
-   </body>
-   <script src="js/myjs.js"></script>
-       <script language="javascript" type="text/javascript">
-        $(window).load(function(){$('#loading').fadeOut(600);});
-    </script>
+        </div>
+    </footer>
+</body>
+
 </html>
